--- a/source/less/_header.less
+++ b/source/less/_header.less
@@ -90,7 +90,8 @@
 	border-right: 0;
 	box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.1);
 	transform: translate3d(280px, 0, 0);
-	transition: transform 0.24s ease;
+	transition: all 0.24s ease;
+	visibility: hidden;
   z-index: 2;
   
   nav {
